Bug #25446 START BACKUP NOWAIT Reports error and then continues
Submitted: 6 Jan 2007 17:40 Modified: 10 Apr 2007 6:35
Reporter: Mike Kruckenberg (Candidate Quality Contributor)
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.1.14 OS:Linux (Ubuntu)
Assigned to: Bugs System Target Version:
Tags: cluster, Backup, nowait

[6 Jan 2007 17:40] Mike Kruckenberg
Description:
I have just freshly started up my cluster and am attempting to take a backup using the
NOWAIT option. When I issue the command I get an error, the control returns to the
console, and then it appears that the backup continues.

The cluster contains only one table, the Country table from the world sample database.

The cluster setup:

ndb_mgm> show
Cluster Configuration
---------------------
[ndbd(NDB)]     2 node(s)
id=2    @192.168.1.210  (Version: 5.1.14, Nodegroup: 0, Master)
id=3    @192.168.1.211  (Version: 5.1.14, Nodegroup: 0)

[ndb_mgmd(MGM)] 1 node(s)
id=1    @192.168.1.200  (Version: 5.1.14)

[mysqld(API)]   1 node(s)
id=4    @192.168.1.220  (Version: 5.1.14)

Attempting to run a backup with NOWAIT:

ndb_mgm> START BACKUP NOWAIT
Node 2: Backup request from 1 failed to start. Error: 1302 - Out of backup record:
Permanent error: Internal error
ndb_mgm> Node 2: Backup 3 started from node 1
Node 2: Backup 3 started from node 1 completed
 StartGCP: 365 StopGCP: 368
 #Records: 2293 #LogRecords: 0
 Data: 110964 bytes Log: 0 bytes

I can run a normal backup:

ndb_mgm> START BACKUP
Waiting for completed, this may take several minutes
Node 2: Backup 4 started from node 1
Node 2: Backup 4 started from node 1 completed
 StartGCP: 382 StopGCP: 385
 #Records: 2293 #LogRecords: 0
 Data: 110964 bytes Log: 0 bytes
ndb_mgm> 

And WAIT STARTED works too:

ndb_mgm> START BACKUP WAIT STARTED
Waiting for started, this may take several minutes
Node 2: Backup 7 started from node 1
ndb_mgm> Node 2: Backup 7 started from node 1 completed
 StartGCP: 630 StopGCP: 633
 #Records: 2293 #LogRecords: 0
 Data: 110964 bytes Log: 0 bytes

Not sure why I'm getting that error on NOWAIT.

How to repeat:
My cluster setup is 1 MGM, 2 storage, 1 SQL node. The data is the Country table from the
world sample database.

- start up the cluster
- issue the START BACKUP NOWAIT command
[22 Mar 2007 9:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22564

ChangeSet@1.2486, 2007-03-22 15:54:41+08:00, Justin.He@dev3-240.dev.cn.tlan +1 -0
  Bug#25446, START BACKUP NOWAIT Reports error and then continues
[29 Mar 2007 10:20] Stewart Smith
looks good to me.
[7 Apr 2007 9:01] Bugs System
Pushed into 5.1.18-beta
[10 Apr 2007 6:35] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 changelog.