Bug#25446, START BACKUP NOWAIT Reports error and then continues